crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__simple_with_layers_segments_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: batch.format_schema_snapshot()
---
frame_nr:end: Int64 [
    dalaran:index: "frame_nr"
    dalaran:index_kind: "sequence"
    dalaran:index_marker: "end"
    dalaran:kind: "index"
]
frame_nr:start: Int64 [
    dalaran:index: "frame_nr"
    dalaran:index_kind: "sequence"
    dalaran:index_marker: "start"
    dalaran:kind: "index"
]
dalaran_last_updated_at: non-null Timestamp(ns)
dalaran_layer_names: non-null List(non-null Utf8)
dalaran_num_chunks: non-null UInt64
dalaran_segment_id: non-null Utf8
dalaran_size_bytes: non-null UInt64
dalaran_storage_urls: non-null List(non-null Utf8)
