crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__simple_with_multiple_timelines_segments_data.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┬────────────────────────────────┬───────────────┬────────────────┬──────────────┬────────────────┬───────────────────────────────┬───────────────────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks ┆ property:text_log:TextLog:text ┆ duration:end  ┆ duration:start ┆ frame_nr:end ┆ frame_nr:start ┆ timestamp:end                 ┆ timestamp:start               │
╞══════════════════╪═══════════════════╪══════════════════╪════════════════════════════════╪═══════════════╪════════════════╪══════════════╪════════════════╪═══════════════════════════════╪═══════════════════════════════╡
│ my_segment_id1   ┆ [base, props]     ┆ 5                ┆ [i'm segment 1]                ┆ null          ┆ null           ┆ 40           ┆ 10             ┆ null                          ┆ null                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id2   ┆ [base, layer_two] ┆ 6                ┆ null                           ┆ PT0.00000004S ┆ PT0.00000001S  ┆ 40           ┆ 10             ┆ null                          ┆ null                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id3   ┆ [base]            ┆ 6                ┆ null                           ┆ null          ┆ null           ┆ null         ┆ null           ┆ 1970-01-01T00:00:00.000000040 ┆ 1970-01-01T00:00:00.000000010 │
└──────────────────┴───────────────────┴──────────────────┴────────────────────────────────┴───────────────┴────────────────┴──────────────┴────────────────┴───────────────────────────────┴───────────────────────────────┘
