crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__simple_with_properties_manifest_data.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬──────────────────┬──────────────────┬──────────────────┬──────────────────────────────────────────┬───────────────────────────┬────────────────────────────────────┬────────────────────────────────┐
│ rerun_layer_name ┆ rerun_segment_id ┆ rerun_layer_type ┆ rerun_num_chunks ┆ rerun_schema_sha256                      ┆ rerun_registration_status ┆ property:points:Points2D:positions ┆ property:text_log:TextLog:text │
╞══════════════════╪══════════════════╪══════════════════╪══════════════════╪══════════════════════════════════════════╪═══════════════════════════╪════════════════════════════════════╪════════════════════════════════╡
│ base             ┆ my_segment_id1   ┆ rrd              ┆ 4                ┆ d993555a9bb588ccebb86ba420107954c37d657… ┆ done                      ┆ null                               ┆ null                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_segment_id2   ┆ rrd              ┆ 2                ┆ 7445711ea6547499a41035b6572d7adb6021f9e… ┆ done                      ┆ null                               ┆ null                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_segment_id3   ┆ rrd              ┆ 6                ┆ a2844c9fa0464c154088a30c919663988c7a332… ┆ done                      ┆ null                               ┆ null                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ props            ┆ my_segment_id1   ┆ rrd              ┆ 1                ┆ 90433089a733d463b38411fbda5e7deb84ba382… ┆ done                      ┆ null                               ┆ [i'm segment 1]                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ props            ┆ my_segment_id2   ┆ rrd              ┆ 2                ┆ 132a7fb5ae403979886a2980d083b836c38892d… ┆ done                      ┆ [[0.0, 1.0]]                       ┆ [i'm segment 2]                │
└──────────────────┴──────────────────┴──────────────────┴──────────────────┴──────────────────────────────────────────┴───────────────────────────┴────────────────────────────────────┴────────────────────────────────┘
